--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -195,7 +195,7 @@
             </div>
             <div class="modal-body">
               <div id="friendMatch"></div>
-              <img id="friendMatchedImage" src="#">
+              <img id="friendMatchedPhoto" width="650" src="">
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary">
