--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -195,7 +195,7 @@
             </div>
             <div class="modal-body">
               <div id="friendMatch"></div>
-              <img id="friendMatchedPhoto" width="650" src="">
+              <img id="friendMatchedPhoto" width="200" src="" />
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary">
@@ -288,7 +288,7 @@
           $.post("/api/friends", newFriend).done(function(data) {
             // Set the name and image values of the matched friend
             $("#friendMatch").html(data.matchedFriend);
-         $("#friendMatchedPhoto").attr("src", data.matchedPhoto);
+            $("#friendMatchedPhoto").attr("src", data.matchedPhoto);
           });
         } else {
           // If a required field is not comoplete, throw alert
