--- a/app/public/home.html
+++ b/app/public/home.html
@@ -17,17 +17,36 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
     />
+
+    <style>
+      .header img {
+        float: left;
+      }
+
+      .header h1 {
+        position: relative;
+        left: 10px;
+      }
+    </style>
   </head>
 
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>
-          <i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder
-        </h1>
+        <div class="header">
+          <img
+            src="http://icons.iconarchive.com/icons/limav/game-of-thrones/256/Stark-icon.png"
+            alt="logo"
+            width="75"
+          />
+          <h1>Game of Thrones Friend Finder</h1>
+        </div>
+
         <hr />
         <h2>Answer a few basic questions.</h2>
-        <h2>Then find the friend with the greatest compatibility!</h2>
+        <h2>
+          And find out which GOT character or fan you are compatible with!
+        </h2>
         <br />
 
         <div>
