--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -198,9 +198,8 @@
               <img id="friendMatchedPhoto" width="200" src="" />
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary">
-                Close
-              </button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                
             </div>
           </div>
         </div>
