Updated modal tile on survey.html modal

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -183,7 +183,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <h2 class="modal-title" id="friendMatch"></h2>
               <button
                 type="button"
                 class="close"
@@ -194,12 +194,16 @@
               </button>
             </div>
             <div class="modal-body">
-              <div id="friendMatch"></div>
               <img id="friendMatchedPhoto" width="200" src="" />
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                
+              <button
+                type="button"
+                class="btn btn-primary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
             </div>
           </div>
         </div>
